# CPPTemplate

./: .gitignore  CMakeLists.txt  build-and-package.sh  config.yaml  init_project.sh  readme.md
include/: AppConfig.h  ConfigManager.h  ConfigManager.hpp  ServerConfig.h  YamlConversions.h  api_handler.h  color_utils.h  error_code.h  logging_system.h  server_initialization.h  system_info.h  system_info_display.h  utils.hpp  version.h.in
src/: ConfigManager.cpp  api_handler.cpp  error_code.cpp  logging_system.cpp  main.cpp  server_initialization.cpp  system_info.cpp  system_info_display.cpp
